--- a/src/components/about/team/about_team.css
+++ b/src/components/about/team/about_team.css
@@ -15,6 +15,7 @@
 .team-contents-container {
     display: flex;
     flex-direction: column;
+
 }
 
 .about-team-container {
@@ -42,12 +43,14 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    width: 100px;
+    white-space: nowrap;
+
 }
 
 .section-links {
     display: flex;
     flex-direction: column;
+
 }
 
 .vertile-rule {
@@ -59,6 +62,7 @@
     flex-direction: column;
     padding-left: 0px;
     list-style: none;
+    gap: 10px;
 
 }
 
@@ -87,7 +91,7 @@
 .mid-section-ctr {
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
+    padding-left: 100px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -182,6 +186,7 @@
 
     .testing {
         flex-direction: column;
+
     }
 
 
