--- a/src/components/about/team/team.css
+++ b/src/components/about/team/team.css
@@ -50,7 +50,7 @@
         justify-content: center;
     }
 
-    #team-container {
+    .team-container {
         display: flex;
         align-items: center;
         flex-direction: column;
